--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "codemirror": "^5.42.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-inspector": "^2.3.1"
+    "react-inspector": "^2.3.1",
+    "react-split-pane": "^0.1.85"
   },
   "devDependencies": {
     "react-scripts": "2.1.1"
