--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "recess",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "codemirror": "^5.42.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-inspector": "^2.3.1",
-    "react-split-pane": "^0.1.85"
-  },
-  "devDependencies": {
-    "react-scripts": "2.1.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+    "name": "recess",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "codemirror": "^5.42.0",
+        "prop-types": "^15.6.2",
+        "react": "^16.7.0-alpha.2",
+        "react-dom": "^16.7.0-alpha.2",
+        "react-inspector": "^2.3.1",
+        "react-split-pane": "^0.1.85"
+    },
+    "devDependencies": {
+        "react-scripts": "2.1.1"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ]
 }
