--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "classnames": "^2.2.6",
         "codemirror": "^5.42.0",
         "prop-types": "^15.6.2",
         "react": "^16.7.0-alpha.2",
