use env var for baseUrl

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "react-scripts": "2.1.1"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "REACT_APP_API=http://localhost:4444 react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
