--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "camel-case": "^3.0.0",
         "classnames": "^2.2.6",
         "codemirror": "^5.42.0",
         "codemirror-graphql": "^0.8.3",
@@ -11,7 +12,8 @@
         "react": "^16.7.0-alpha.2",
         "react-dom": "^16.7.0-alpha.2",
         "react-inspector": "^2.3.1",
-        "react-split-pane": "^0.1.85"
+        "react-split-pane": "^0.1.85",
+        "snake-case": "^2.1.0"
     },
     "devDependencies": {
         "react-scripts": "2.1.1"
