don’t fetch bad autocomplete data

--- a/package.json
+++ b/package.json
@@ -28,9 +28,8 @@
         "extends": "react-app"
     },
     "browserslist": [
-        ">0.2%",
-        "not dead",
-        "not ie <= 11",
+        ">1%",
+        "not ie 11",
         "not op_mini all"
     ]
 }
