--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
         "codemirror-graphql": "^0.8.3",
         "graphql": "^14.0.2",
         "prop-types": "^15.6.2",
-        "react": "^16.7.0-alpha.2",
-        "react-dom": "^16.7.0-alpha.2",
+        "react": "^16.10.0",
+        "react-dom": "^16.10.0",
         "react-inspector": "^2.3.1",
         "react-split-pane": "^0.1.85",
         "snake-case": "^2.1.0"
     },
     "devDependencies": {
-        "react-scripts": "2.1.1"
+        "react-scripts": "3.1.2"
     },
     "scripts": {
         "start": "REACT_APP_API=http://localhost:4444 react-scripts start",
