--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "snake-case": "^2.1.0"
     },
     "devDependencies": {
-        "react-scripts": "3.1.2"
+        "react-scripts": "^3.3.0"
     },
     "scripts": {
         "start": "REACT_APP_API=http://localhost:4444 react-scripts start",
