--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
         "snake-case": "^2.1.0"
     },
     "devDependencies": {
-        "react-scripts": "^3.3.0"
+        "react-scripts": "^3.4.1"
     },
     "scripts": {
         "start": "REACT_APP_API=http://localhost:4444 react-scripts start",
+        "start:be": "cd be && go run main.go -port 4444 -nofe",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
