feat: request history panel

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "codemirror": "^5.42.0",
         "codemirror-graphql": "^0.8.3",
         "graphql": "^14.0.2",
+        "lodash.debounce": "^4.0.8",
         "prop-types": "^15.6.2",
         "react": "^16.10.0",
         "react-dom": "^16.10.0",
