--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,10 @@ yarn-error.log*
 # go build file
 recess
 .vscode
+
+#yarn
+.yarn/*
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
