--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "snake-case": "^2.1.0"
     },
     "devDependencies": {
-        "react-scripts": "^4.0.3"
+        "react-scripts": "^5.0.0"
     },
     "scripts": {
         "start": "REACT_APP_API=http://localhost:4444 react-scripts start",
@@ -32,5 +32,6 @@
         ">1%",
         "not ie 11",
         "not op_mini all"
-    ]
+    ],
+    "packageManager": "yarn@3.1.1"
 }
