--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-inspector": "^6.0.1",
+        "react-redux": "^8.0.4",
         "react-split-pane": "^0.1.92",
+        "redux": "^4.2.0",
         "snake-case": "^2.1.0"
     },
     "devDependencies": {
